# obs-midi

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  VERSION  azure-pipelines.yml  azure-testing.yml  azureremoves.txt  build.md  config.cpp  config.h  crowdin.yml  device-manager.cpp  device-manager.h  device.cpp  device.hpp  doxygen.conf  events.cpp  events.h  formatcode.sh  midi-agent.cpp  midi-agent.h  obs-controller.cpp  obs-controller.h  obs-midi.cpp  obs-midi.h  router.cpp  router.h  tmpfile  utils.cpp  utils.h
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI Build and release linux.yml  CI Build and release mac.yml  CI Build and release windows .yml  CI Build and release.yml  CI Build linux.yml  CI Build mac.yml  CI Build windows .yml  Discord Notification.yml  Discord Push.yml  clang_format_check.yml  cmake.yml  codeql-analysis.yml  docs.yml  doxygen.yml
CI/: build-macos.sh  build-ubuntu.sh  check-format.sh  install-build-obs-macos.sh  install-dependencies-macos.sh  install-dependencies-ubuntu.sh  package-macos.sh  package-ubuntu.sh  package-windows.cmd  prepare-obs-windows.cmd
CI/macos/: Brewfile  obs-midi.pkgproj  obs-websocket.pkgproj  qt.rb  swig.rb
data/locale/: af-ZA.ini  ar-SA.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-US.ini  es-ES.ini  fi-FI.ini  fr-FR.ini  he-IL.ini  hu-HU.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  nl-NL.ini  no-NO.ini  pl-PL.ini  pt-BR.ini  pt-PT.ini  ro-RO.ini  ru-RU.ini  sr-SP.ini  sv-SE.ini  tr-TR.ini  uk-UA.ini  vi-VN.ini  zh-CN.ini  zh-TW.ini
docs/: CMakeLists.txt  CNAME  Doxyfile.in  Gemfile  README.md  _config.yml  about.md  build.md  coding_convention_en.md  comments.js  conf.py  downloads.md  help.md  index.markdown  index.md  package.json  releasehead.md
docs/_posts/: 2021-02-19-obs-midi-alpha-2-release.markdown  2021-02-19-welcome-to-jekyll.markdown  2021-02-27-config_system_changes.md  2021-03-07-Update Alpha 3.md
docs/def/: doxygen.def
docs/devdocs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.rst
docs/docbook/: annotated.xml  class_actions_class.xml  class_config.xml  class_device_manager.xml  class_midi_agent.xml  class_midi_hook.xml  class_o_b_s_controller.xml  class_plugin_window.xml  class_rpc_event.xml  class_rpc_request.xml  class_rpc_response.xml  classevents.xml  index.xml  struct_midi_message.xml  structrtmidi_1_1message.xml  structrtmidi_1_1meta__events.xml  structrtmidi_1_1track__event.xml
docs/html/: _rpc_event_8h_source.html  _rpc_request_8h_source.html  _rpc_response_8h_source.html  actions_8h_source.html  annotated.html  annotated_dup.js  class_actions_class-members.html  class_actions_class.html  class_actions_class.js  class_config-members.html  class_config.html  class_config.js  class_device_manager-members.html  class_device_manager.html  class_device_manager.js  class_midi_agent-members.html  class_midi_agent.html  class_midi_agent.js  class_midi_hook-members.html  class_midi_hook.html  class_midi_hook.js  class_o_b_s_controller-members.html  class_o_b_s_controller.html  class_o_b_s_controller.js  class_plugin_window-members.html  class_plugin_window.html  class_plugin_window.js  class_rpc_event-members.html  class_rpc_event.html  class_rpc_event.js  class_rpc_request-members.html  class_rpc_request.html  class_rpc_request.js  class_rpc_response-members.html  class_rpc_response.html  class_rpc_response.js  classes.html  classevents-members.html  classevents.html  classevents.js  (+44 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  pages_1.js  pages_2.js  search.css  (+1 more)
docs/latex/: annotated.tex  class_actions_class.eps  class_actions_class.tex  class_config.eps  class_config.tex  class_device_manager.eps  class_device_manager.tex  class_midi_agent.eps  class_midi_agent.tex  class_midi_hook.eps  class_midi_hook.tex  class_o_b_s_controller.eps  class_o_b_s_controller.tex  class_plugin_window.eps  class_plugin_window.tex  class_rpc_event.tex  class_rpc_request.tex  class_rpc_response.tex  classevents.eps  classevents.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  md__s_e_c_u_r_i_t_y.tex  md_build.tex  refman.tex  struct_midi_message.tex  structrtmidi_1_1message.tex  structrtmidi_1_1meta__events.tex  structrtmidi_1_1track__event.tex
docs/partials/: introduction.md
docs/sphinx/: conf.py
forms/: configdelegate.cpp  configdelegate.h  configwindow.cpp  configwindow.h  configwindow.ui  deviceWindow.ui  mainwindow.ui  obe_configwindow.ui  settings-dialog.cpp  settings-dialog.files  settings-dialog.h  settings-dialog.h.autosave  settings-dialog.ui  settings-dialog.ui.autosave  settings-midi-map.cpp  settings-midi-map.h  settings-midi-map.ui  settings-midi-map.ui.autosave
forms/new/: configwindow.cpp  configwindow.h  configwindow.ui
include/: version.h.in
installer/: installer.iss
orig_rtmidi/: CMakeLists.txt
rpc/: RpcEvent.h
rtmidi/: CMakeLists.txt  RtMidi.cpp  rtmidi_c.h
src/: CMakeLists.txt  actions.cpp  actions.h  config.cpp  config.h  device-manager.cpp  device-manager.h  events.cpp  events.h  macro-helpers.h  message.hpp  midi-agent.cpp  midi-agent.h  midi-response.cpp  midi-response.h  obs-controller.cpp  obs-controller.h  obs-midi.cpp  obs-midi.h  utils.cpp  utils.h  version.h
src/RtMidi17/: CMakeLists.txt
src/RtMidi17/rtmidi17/: rtmidi17.cpp
src/RtMidi17/rtmidi17/detail/: alsa.hpp  winuwp.hpp
src/RtMidi17/tests/: cmidiin.cpp  midiclock_in.cpp  midiobserve.cpp  sysextest.cpp
src/data/locale/: en-US.ini
src/forms/: Macros.cpp  Macros.h  configwindow.cpp  configwindow.h  configwindow.ui  settings-dialog.cpp  settings-dialog.h  settings-dialog.ui
src/forms/old/: configwindow.ui
src/rpc/: RpcEvent.cpp  RpcEvent.h  RpcRequest.cpp  RpcRequest.h  RpcResponse.cpp  RpcResponse.h
